<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.masso.sarawaktour.Tempat_gunungmulu">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="1">

        <!-- Blank For Spacing -->
        <ImageView
            android:id="@+id/blank"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <!-- Blank for spacing end-->

        <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempatsarawak3"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/blank"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin" />

        <ImageView
            android:id="@+id/kelahiran0"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/tempat_gunungmulu"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/header" />



        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/kelahiran2"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/next"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi"
            android:id="@+id/lokasi"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/back"/>



    </TableLayout>

</android.support.v4.widget.NestedScrollView>
